<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".layoutAndLifeCycle.MainActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBlue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_contact_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/ic_contactus_icon" />

                <TextView
                    android:id="@+id/tv_contact_DirectContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/direct_contact"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="37dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_contact_icon" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/iv_contact_addressIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_address_contact"
                android:layout_marginTop="23dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_blue" />

            <TextView
                android:id="@+id/tv_contact_addressTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adress_location"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_contact_addressIcon" />

            <TextView
                android:id="@+id/tv_contact_addressData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_13_amad_orabi_st_jeddah"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_contact_addressTxt" />

            <TextView
                android:id="@+id/tv_contact_openMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_on_map"
                android:textColor="@color/colorBlue"
                android:layout_marginTop="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_contact_addressData" />

            <ImageView
                android:id="@+id/iv_phone_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone_contact"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_contact_openMap" />

            <TextView
                android:id="@+id/tv_phone_number_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_phone_image" />

            <TextView
                android:id="@+id/tv_contact_phoneData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_966_2031_2054_445"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_phone_number_label" />


            <ImageView
                android:id="@+id/iv_clock_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_clock_contact"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_contact_phoneData" />

            <TextView
                android:id="@+id/tv_time_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_work_times"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_clock_image" />


            <TextView
                android:id="@+id/tv_time_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9_00_am_6_00_pm"
                android:layout_marginTop="2dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_time_txt" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>